Add setting to disable latency recovery for tests

The scheduler uses timing history (and other inputs) to decide if it
should try to recover latency.  This makes some tests dependent
on timing in terms of whether the scheduler will ever send a begin
frame (or not, if it's trying to recover main thread latency).  In
some cases, this also can cause a live lock in tests where the
scheduler is waiting for activation to send a begin frame and the
activation is waiting for a begin frame before it lets itself finish.
This has been fixed in the past by just making the tests tick quicker,
but that's not very future proof.

So, in order to make cc tests more robust, add a setting that disables
all latency recover in the scheduler.

R=brianderson@chromium.org
BUG=632544

Review-Url: https://codereview.chromium.org/2354673003
Cr-Commit-Position: refs/heads/master@{#419573}

Former-commit-id: eb16f56d14abc73321c5128b0374f94c747aa9db